--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Travel
 
-server.port=8080
+#server.port=8080
 ## DATABASE CONFIGURATION
 ## ===============================
 #spring.datasource.url=jdbc:mysql://localhost:3307/travel
@@ -37,3 +37,4 @@ spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+server.port=${PORT:8080}
