--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.application.name=Travel
 # ==========================
 # Server Config
 # ==========================
-# Port can be overridden by environment variable PORT, defaults to 8080
 server.port=${PORT:8080}
 
 # ==========================
@@ -17,11 +16,16 @@ spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASS:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA / Hibernate
+# Hibernate / JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Optional HikariCP tuning
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
 
 # ==========================
 # Jackson JSON Serialization
