--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -30,11 +30,11 @@ app.jwt.expiration=${JWT_EXPIRATION:86400000}
 #spring.datasource.url=jdbc:postgresql://dpg-d64skljqhjbs73cp95o0-a.singapore-postgres.render.com/mydb_3rpe
 #spring.datasource.username=root
 #spring.datasource.password=xoyjgjBEUeMJ2nw1ribetXk2uOqTnTIB
-spring.datasource.url=${DB_URL}
+spring.datasource.url=${DB_URL}e=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 #
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-nam
 
-server.port=${PORT:8080}
+server.port=8080
